# sluice

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  REFACTORING_PLAN.md  build.rs  deny.toml  flake.nix
.beads/export-state/: 5a0287d656149e9c.json  bb802de59e7ffa3d.json
.cargo/: config.toml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.opencode/plans/: 2026-02-08-sluice-improvements.md
crates/lazysluice/: Cargo.toml
crates/lazysluice/src/: app.rs  controller.rs  events.rs  main.rs  ui.rs
crates/lazysluice/src/grpc/: client.rs
crates/sluice-client/: Cargo.toml  README.md
crates/sluice-client/examples/: simple_publish.rs  subscribe_and_ack.rs
crates/sluice-client/src/: connection.rs  error.rs  lib.rs  subscription.rs
crates/sluice-proto/: Cargo.toml
crates/sluice-proto/proto/sluice/v1/: sluice.proto
crates/sluice-server/: Cargo.toml  README.md
crates/sluice-server/src/service/: admin.rs  batch_publish.rs  mod.rs  stats.rs  subscribe.rs
crates/sluice-server/src/storage/: schema.rs  writer.rs
crates/sluice-server/tests/: integration_test.rs  quickstart_test.rs  subscribe_test.rs
crates/sluice-server/tests/common/: mod.rs
crates/sluicectl/: Cargo.toml
specs/001-mvp-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp-core/checklists/: requirements.md
specs/001-mvp-core/contracts/: grpc-api.md
specs/002-lazysluice-tui/: tasks.md
src/client/: connection.rs  ops.rs
src/service/: subscribe.rs
src/storage/: writer.rs
tests/: cli_test.rs
