[package]
name = "sluice"
version = "0.1.0"
edition = "2021"
description = "A gRPC-native message broker with credit-based flow control"
authors = ["Sluice Authors"]
license = "MIT OR Apache-2.0"

[dependencies]
# gRPC and protobuf
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full", "sync", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }

# SQLite persistence
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# UUID generation (v7 time-sortable)
uuid = { version = "1.7", features = ["v7"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = "0.26"

# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization (for attributes JSON)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "sluice"
path = "src/main.rs"

[lib]
name = "sluice"
path = "src/lib.rs"
