[workspace]
members = [
    "crates/sluice-proto",
    "crates/sluice-client",
    "crates/sluice-server",
    "crates/lazysluice",
    "crates/sluicectl",
]
resolver = "2"

[workspace.dependencies]
# gRPC and protobuf
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"

# SQLite persistence
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# UUID generation
uuid = { version = "1.7", features = ["v7"] }

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = "0.26"

# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dev dependencies
tempfile = "3"
tokio-test = "0.4"

# Build dependencies
tonic-build = "0.12"

# TUI dependencies
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
