[package]
name = "lazysluice"
version = "0.1.0"
edition = "2021"
description = "Terminal UI client for Sluice"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
prost = "0.13"
ratatui = "0.26"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "lazysluice"
path = "src/main.rs"
