[package]
name = "lazysluice"
version = "0.1.0"
edition = "2021"
description = "Terminal UI client for Sluice"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
sluice-client = { path = "../sluice-client" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[[bin]]
name = "lazysluice"
path = "src/main.rs"
