[package]
name = "sluice-client"
version = "0.1.0"
edition = "2021"
description = "Client library for Sluice message broker"
authors = ["Sluice Authors"]
license = "MIT OR Apache-2.0"

[dependencies]
# Proto definitions
sluice-proto = { path = "../sluice-proto" }

# gRPC (client only, with TLS)
tonic = { workspace = true }

# Async runtime (uses workspace features which include "full")
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing (optional for debug)
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lib]
name = "sluice_client"
path = "src/lib.rs"
