[package]
name = "sluice-proto"
version = "0.1.0"
edition = "2021"
description = "Protocol buffer definitions for Sluice message broker"
authors = ["Sluice Authors"]
license = "MIT OR Apache-2.0"

[dependencies]
# gRPC and protobuf
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
