[package]
name = "sluice-server"
version = "0.1.0"
edition = "2021"
description = "A gRPC-native message broker with credit-based flow control"
authors = ["Sluice Authors"]
license = "MIT OR Apache-2.0"

[dependencies]
# Proto definitions
sluice-proto = { path = "../sluice-proto" }

# gRPC and protobuf
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
futures = { workspace = true }

# SQLite persistence
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# UUID generation (v7 time-sortable)
uuid = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# CLI and configuration
clap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization (for attributes JSON)
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
futures = { workspace = true }
sluice-client = { path = "../sluice-client" }

[[bin]]
name = "sluice"
path = "src/main.rs"

[lib]
name = "sluice_server"
path = "src/lib.rs"
