[package]
name = "sluicectl"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Sluice message broker"
license = "MIT OR Apache-2.0"

[dependencies]
# Sluice client library
sluice-client = { path = "../sluice-client" }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Output formatting
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing (for debug output)
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bin]]
name = "sluicectl"
path = "src/main.rs"
